# chuk-tool-processor

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PRINCIPLES.md  DX_IMPROVEMENTS_COMPLETED.md  DX_IMPROVEMENTS_FINAL.md  DX_IMPROVEMENTS_ROUND2.md  DX_IMPROVEMENTS_SUMMARY.md  EXAMPLES_CONSOLIDATION_ANALYSIS.md  EXAMPLES_CONSOLIDATION_COMPLETE.md  Makefile  OBSERVABILITY.md  README.md  README.md.bak  check_examples_dx.py  coverage.json  main.py  pyproject.toml  roadmap.md  ruff.toml  server_config.json  test_all_examples.py
.github/workflows/: publish.yml  release.yml  test.yml
benchmarks/: README.md  json_performance.py  strategy_benchmark.py  tool_processing_benchmark.py
debug/: debug_sse_connection.py  debug_timeout_source.py  debug_timeout_strategy.py  debug_tools_list_response.py  find_actual_files.py  find_hardcoded_timeout.py  find_inprocess_bug.py  mcp_concurrent_tool_concatenation_debug.py  mcp_timeout_bug_demo.py  registry_diagnostic.py  registry_registration.py  registry_registration_extended.py  simple_sse_debug.py  src_size.py  timeout_bug_demo.py  timeout_source_analysis.py  transport_layer_diagnostic.py
docs/: ADVANCED_TOPICS.md  CI-CD.md  CONFIGURATION.md  CORE_CONCEPTS.md  DISCOVERY.md  ERRORS.md  GETTING_STARTED.md  GRAFANA-DASHBOARD.md  GUARDS.md  MCP_INTEGRATION.md  OBSERVABILITY.md  PRODUCTION_PATTERNS.md  RELEASING.md  advanced_tool_use.md  grafana-dashboard.json  mcp_deferred_loading.md  programmatic_execution.md  telemetry.md  tool_examples.md
examples/: README.md  advanced_tool_use_complete.py  advanced_tool_use_math_server.py  async_registry_example.py  async_sse_mcp_client.py  atlassian_sse.py  code_sandbox_demo.py  context7_chuk_integration_demo.py  debug_timeout_source.py  debug_timeout_strategy.py  demo_all_parser_plugins.py  demo_bearer_token.py  demo_langchain_tool.py  demo_strategies_wrapper.py  dynamic_tool_binding_example.py  execution_strategies_custom_demo.py  execution_strategies_demo.py  fastapi_registry_example.py  find_actual_files.py  find_inprocess_bug.py  gateway_health_diagnostic.py  gateway_integration_demo.py  generate_metrics.py  guards_demo.py  health_diagnostic.py  hello_tool.py  mcp_deferred_loading_example.py  mcp_http_streamable_example.py  mcp_http_streamable_example_calling_usage.py  mcp_http_streamable_resilience_test_results.json  mcp_resilience_test_results.json  mcp_sse_example.py  mcp_sse_example_calling_usage.py  mcp_sse_example_subprocess_strategy.py  mcp_sse_resilience_test_results.json  mcp_sse_server.py  mcp_stdio_example.py  mcp_stdio_example_calling_usage.py  mcp_stdio_example_resources.py  mcp_stdio_example_subprocess_strategy.py  (+39 more)
examples/01_getting_started/: execution_strategies_demo.py  hello_tool.py  quickstart_demo.py
examples/02_production_features/: distributed_config_demo.py  hero_runtime_demo.py  observability_demo.py  production_patterns_demo.py  redis_registry_demo.py  runtime_features_demo.py  wrappers_demo.py  (+1 more)
tests/: conftest.py  test_config_coverage.py
(+231 files in other folders)
